--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   },
   "homepage": "https://github.com/alto-io/decentralized-game-example#readme",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@parcel/config-default": "2.0.0-beta.1",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.4",
     "hardhat": "^2.9.0",
     "parcel": "2.0.0-beta.1",
     "parcel-reporter-static-files-copy": "^1.2.2",
@@ -31,6 +36,7 @@
     "watcherGlob": "**"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0"
+    "@openzeppelin/contracts": "^4.5.0",
+    "base64-sol": "^1.1.0"
   }
 }
