--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "watcherGlob": "**"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0"
+    "@openzeppelin/contracts": "^4.5.0",
+    "phaser-component-health": "^3.0.0",
+    "phaser-percent-bar": "^1.1.5"
   }
 }
