--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,7 +40,7 @@ jobs:
         run: npm install
 
       - name: Build the IPFS bundle
-        run: yarn build
+        run: npm build
 
       - name: Pin to IPFS
         id: upload
